--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "doctrine/orm": "^3.1",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.26",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.1.*",
-        "symfony/asset-mapper": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/doctrine-messenger": "6.1.*",
         "symfony/dotenv": "6.1.*",
